# audisp-tacplus

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  audisp-tac_plus.conf  audisp-tacplus.8  audisp-tacplus.c  audisp-tacplus.conf  audisp-tacplus.rules  config.h.in  configure  configure.ac
debian/: README.source  audisp-tacplus.manpages  audisp-tacplus.postinst  audisp-tacplus.postrm  changelog  control  copyright  init.d  rules
